<resources>
    <string name="app_name">LETAK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_desc">Sabah Online Parking Application</string>
    <string name="operator_registration"> <u>Operator Registration</u> </string>
    <string name="ready_to_letak">Ready to LETAK?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Phone</string>
    <string name="register">Register</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="email_or_phone_num">Email</string>
    <string name="letak_now">Letak Now</string>
    <string name="monthly_pass">Monthly Pass</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="welcome_user">Good Afternoon Qawi!</string>
    <string name="setting">Setting</string>
    <string name="no_active_parking">There are no active parking currently</string>
    <string name="a_little_insight">A little insight...</string>
    <string name="advance_book">Advance Book</string>
    <string name="remaining">minutes remaining</string>
    <string name="unpark">Unpark</string>
    <string name="extend">Extend</string>
    <string name="parking_expiring">Expiring Parking</string>
    <string name="parking_expiring_soon">Your Parking Expires In A Few Minutes</string>
    <string name="parking_expired">Expired</string>
    <string name="monthly_pass_desc">Get monthly pass to park for a month</string>
    <string name="pass_desc">Park everyday at 8am-6pm using the purchased pass</string>
    <string name="pass_desc_2">Parking space will be reserved just for you everyday!</string>
    <string name="no_active_pass">There is no active monthly pass, yet…</string>
    <string name="purchase_monthly_pass">Purchase monthly pass</string>
    <string name="notification_caps">NOTIFICATIONS</string>
    <string name="profile_caps">PROFILE</string>
    <string name="order_history_caps">ORDER HISTORY</string>
    <string name="order_history">Order History</string>
    <string name="clear_notifications">Clear All</string>
    <string name="letak_card">LETAK Card</string>
    <string name="letak_vehicle">LETAK Vehicle</string>
    <string name="manage_profile">Manage</string>
    <string name="register_new_vehicle">Register New Vehicle</string>
    <string name="show_profile">Show Profile</string>
    <string name="status">Status: </string>
    <string name="days_left">Days left: </string>
    <string name="park">Park</string>
    <string name="active">Active</string>
    <string name="inactive">Expired</string>
    <string name="need_assistance">Need Assistance</string>
    <string name="parking_fee">Parking Fee:</string>
    <string name="parking_space">Parking Space</string>
    <string name="parking_time">Parking Time</string>
    <string name="continue_button">Continue</string>
    <string name="parking_duration">Parking Duration</string>
    <string name="hour_hint">hh</string>
    <string name="minute">mm</string>
    <string name="enter_hour">Enter hour between 1 – 23</string>
    <string name="enter_minute">Enter minute between 0 – 59</string>
    <string name="red_valid_below_two_hours">Red Parking Space Only Available For 2 Hours</string>
    <string name="parking_details">Parking Details</string>
    <string name="payment">Payment</string>
    <string name="select_preferred_ewallet">Select your preferred e-wallet</string>
    <string name="select_vehicle">Select your vehicle</string>
    <string name="available_vehicle">Available Vehicle</string>
    <string name="confirmation_reminder">Reminder: Go to the selected parking space in 5 minutes to avoid cancellation</string>
    <string name="no_vehicle_selected">Please select your vehicle</string>
    <string name="parking_is_not_available">Parking Space Selected Not Available</string>
    <string name="parking_ready">Yeay! Your parking is ready.</string>
    <string name="tap_park_button">Tap PARK button once you have arrived.</string>
    <string name="tap_assistance_button">Needing help? Tap NEED ASSISTANCE button below.</string>
    <string name="time_left">Time left: </string>
    <string name="letak_where">LETAK where?</string>
    <string name="available_letak_now">Available parking lot</string>
    <string name="select_parking_lot">Select Parking Lot</string>
    <string name="available_monthly_pass">Available Monthly Pass</string>
    <string name="registered_car_can_park">All your registered car can park in the selected parking lot.</string>
    <string name="park_start_date">Park Start Date</string>
    <string name="park_end_date">Park End Date</string>
    <string name="valid_for">Valid for: </string>
    <string name="monthly_pass_selection">Monthly Pass: </string>
    <string name="parking_time_selection">Parking Time: </string>
    <string name="only_available_green">Only Available for Green Space</string>
    <string name="select_start_date">Select Starting Date</string>
    <string name="pass_time">8am - 6pm</string>
    <string name="pass_price">RM 165</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="pass_details">Pass Details</string>
    <string name="pick_a_date">Pick A Date</string>
    <string name="day_after_today">Start Date is At Least Tomorrow</string>
    <string name="purchase_pass">Purchase Pass</string>
    <string name="check_time">Parking Pass Only Valid from 8am to 6pm</string>
    <string name="have_not_parked">You Have Not Parked Yet</string>
    <string name="important_notice">Important notice: </string>
    <string name="the_notice">You are only eligible for the parking space at the specified time. Parking outside of the specified time will be charged at the normal rate.</string>
    <string name="extend_parking_time">Extend Parking Time</string>
    <string name="extend_rule">The extended time will be charged once you have unpark your vehicle</string>
    <string name="extend_charge">Extend charge: </string>
    <string name="assistance_desc">You need help with something or you cannot find the parking space?</string>
    <string name="parking_lot_contact">Parking Lot Contact: </string>
    <string name="description">Description:</string>
    <string name="assist_me">Assist Me</string>
    <string name="select_your_parking">Select Your Parking</string>
    <string name="select_preferred_spot">Select Preferred Spot</string>
    <string name="confirm_your_booking">Confirm Your Booking</string>
    <string name="all_set">You are all set</string>
    <string name="select_pass">Select Preferred Pass</string>
    <string name="register_vehicle">Register New Vehicle</string>
    <string name="vehicle_name">Vehicle Name: </string>
    <string name="vehicle_plate">Vehicle Plate: </string>
    <string name="vehicle_colour">Vehicle Colour: </string>
    <string name="register_vehicle_button">Register Vehicle</string>
    <string name="fill_out_vehicle_details">Please Fill Out Vehicle Details</string>
    <string name="vehicle_registration_successful">Vehicle Registration Successful</string>
    <string name="fill_out_details">Please fill out details</string>
    <string name="password_not_confirmed">Password is not the same</string>
    <string name="authentication_failed">Authentication failed, try again</string>
    <string name="registration_success">Registration Success</string>
    <string name="sign_in_google_success">Registration using Google success</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="enter_phone_number">Enter your phone number for verification purpose</string>
    <string name="verification">Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="receive_otp">You will receive OTP via SMS. Standard rates may apply</string>
    <string name="otp">One-Time-Passcode</string>
    <string name="did_not_receive_sms">Didn\'t receive notification?</string>
    <string name="resend_again">Resend again</string>
    <string name="phone_number_incorrect">Phone number incorrect. Try again</string>
    <string name="my_first_name">My first name</string>
    <string name="my_last_name">My last name</string>
    <string name="add_photo">Add Photo</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="profile_setup_desc">Tell us about yourself</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="about_me">About Me</string>
    <string name="my_details">My Details</string>
    <string name="save_profile">Save Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="email_not_set_yet">Email Not Set Yet</string>
    <string name="phone_not_set_yet">Phone Number Not Set Yet</string>
    <string name="fill_up_user_detail">Fill Up User Details</string>
    <string name="manage_your_vehicle">Manage My Vehicle</string>
    <string name="vehicle_details">Vehicle\'s Details</string>
    <string name="vehicle_name_hint">Vehicle Name</string>
    <string name="vehicle_plate_hint">Vehicle Plate Number</string>
    <string name="vehicle_color_hint">Vehicle Colour</string>
    <string name="make_change">Make Changes</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="enter_vehicle_details">Please Fill Out Vehicle Details</string>
    <string name="vehicle_deleted">Vehicle Deleted</string>
    <string name="delete_confirmation">Delete This Vehicle?</string>
    <string name="confirmed_delete_vehicle">Yes</string>
    <string name="no_delete_vehicle">No</string>
    <string name="delete_vehicle_cannot_undone">Deleting Your Vehicle Cannot Be Undone</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="advance_reminder">Make sure to park your vehicle at stated time!</string>
    <string name="advance_parking_time">Parking Time</string>
    <string name="set_date">Set Your Date</string>
    <string name="set_time">Set Your Time</string>
    <string name="adv_book_rule">Advance Booking Must Be Between 6-12 hours before</string>
    <string name="no_available_space">Selected Space Type Is Unavailable</string>
    <string name="not_time_to_park">Not the time you set time to park</string>
    <string-array name="space_type">
        <item>Green</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
    <string-array name="adv_space_type">
        <item>Green</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
</resources>