<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pass_nav"
    app:startDestination="@id/monthlyPassParkingLotSelectionFragment">

    <fragment
        android:id="@+id/monthlyPassParkingLotSelectionFragment"
        android:name="com.abing.letak.monthlypassactivity.fragments.MonthlyPassParkingLotSelectionFragment"
        android:label="@string/select_parking_lot"
        tools:layout="@layout/fragment_monthly_pass_parking_lot_selection">
        <action
            android:id="@+id/action_monthlyPassParkingLotSelectionFragment_to_monthlyPassSpaceSelection"
            app:destination="@id/monthlyPassSpaceSelection" />
    </fragment>
    <fragment
        android:id="@+id/monthlyPassSpaceSelection"
        android:name="com.abing.letak.monthlypassactivity.fragments.MonthlyPassSpaceSelection"
        android:label="@string/select_pass"
        tools:layout="@layout/fragment_monthly_pass_space_selection">
        <action
            android:id="@+id/action_monthlyPassSpaceSelection_to_monthlyPassConfirmationFragment"
            app:destination="@id/monthlyPassConfirmationFragment" />
    </fragment>
    <fragment
        android:id="@+id/monthlyPassConfirmationFragment"
        android:name="com.abing.letak.monthlypassactivity.fragments.MonthlyPassConfirmationFragment"
        android:label="@string/all_set"
        tools:layout="@layout/fragment_monthly_pass_confirmation" />
</navigation>